[package]
name = "bestest_panik"
version = "0.1.0"
edition = "2021"
authors = ["The-Emperor10 <44948520+The-Emperor10@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dev-dependencies]
rusty-fork = "0.3.0"