[package]
name = "bestest_panik"
version = "0.1.0"
edition = "2021"
authors = ["The-Emperor10 <44948520+The-Emperor10@users.noreply.github.com>"]
description = "The bestest panik that really paniks. (joke crate)"
repository = "https://github.com/The-Emperor10/bestest_panik"
license-file = "LICENSE"

[dependencies]
libc = "0.2"

[dev-dependencies]
rusty-fork = "0.3.0"